Fixed Safari compatibility issue via removing checkVisibility() method

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,6 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    min-height: 84vh;
 }
 
 .hero_text {
